# crob_gazebo_models

./: CMakeLists.txt  LICENSE  README.md  package.xml
models/beam/: model.config  model.sdf
models/beam/meshes/: beam.stl
models/beam_weld/: model.config  model.sdf
models/beam_weld/meshes/: beam_weld.stl  beam_weld_thicker.stl
models/beam_weld_l/: model.config  model.sdf
models/beam_weld_l/meshes/: beam_weld_l.stl
models/beam_weld_rectangle/: model.config  model.sdf
models/beam_weld_rectangle/meshes/: beam_weld_rectangle.stl
models/beam_weld_u/: model.config  model.sdf
models/beam_weld_u/meshes/: beam_weld_u.stl  beam_weld_u_larger.stl
models/beam_weld_u_outline/: model.config  model.sdf
models/beam_weld_u_outline/meshes/: beam_weld_u_outline.stl
models/beam_weld_u_side/: model.config  model.sdf
models/distorted_ camera/: model.config  model.sdf
models/distorted_ projector/: model.config  model.sdf
models/electric_panel/: model.config  model.sdf
models/floor/: model.config  model.sdf
models/gball/: model.config  model.sdf
models/metal_plane/: model.config  model.sdf
models/paredes_esferovite_v4/: model.config  model.sdf
models/ramp/: model.config  model.sdf
models/ramp_van/: model.config  model.sdf
models/robotica_2015/: model.config  model.sdf
models/ship_interior/: model.config
models/ship_interior_corner/: model.config  model.sdf
models/ship_interior_without_ceiling/: model.config  model.sdf
models/sun/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
models/van/: model.config  model.sdf
(+11 files in other folders)
